# src/Veiculos/Presentation/Http/DTO/ListagemVeiculosResponseDTO.php
@@ -6,13 +6,20 @@ namespace App\Veiculos\Presentation\Http\DTO;
 
 use App\Core\Presentation\Http\DTO\PaginacaoDTO;
 use App\Veiculos\Application\UseCase\ListarVeiculo\ListarVeiculoOutputDTO;
+use OpenApi\Attributes as OA;
 
+#[OA\Schema]
 final class ListagemVeiculosResponseDTO {
     /**
      * @param VeiculoResponseDTO[] $dados
      */
     public function __construct(
+        #[OA\Property(
+            type: 'array',
+            items: new OA\Items(ref: VeiculoResponseDTO::class)
+        )]
         public readonly array $dados,
+        #[OA\Property(ref: PaginacaoDTO::class)]
         public readonly PaginacaoDTO $paginacao,
     ) {}
 
